小数点以下桁数指定, 型変換冗長性解決